# bevy_wfc

./: .gitignore  Cargo.toml  Readme.md
assets/: air.tile  block.tile  corner.tile  description.desc  inner_corner.tile  straight.tile  window.tile
assets/models/: block.glb  corner.glb  inner_corner.glb  straight.glb  window.glb
src/: camera.rs  main.rs  ui.rs  wfc_asset.rs  world.rs
wfc_solver/: Cargo.toml
wfc_solver/src/: description.rs  error.rs  lib.rs  utils.rs
wfc_solver/src/solver/: mod.rs  naive.rs  wasm.rs  z3solver.rs
wfc_solver/tests/: description.rs  neighbour.rs
