[package]
edition = "2021"
name = "bevy_wfc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_asset_ron = "0.4.0"
bevy_egui = "0.14"
rand = {version = "0.8.5", default-features = false, features = ["small_rng"]}

serde = {version = "1", features = ["derive"]}
wfc_solver = {path = "./wfc_solver"}
[workspace]
members = ["wfc_solver"]

# cargo run --target wasm32-unknown-unknown
# wasm-bindgen .\target\wasm32-unknown-unknown\release\bevy_wfc.wasm --out-dir ./out/