[package]
edition = "2021"
name = "wfc_solver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {version = "1", default-features = false, features = ["alloc"]}
getrandom = {version = "0.2", features = ["js"]}
rand = {version = "0.8.5", default-features = false, features = ["small_rng"]}
z3 = {git = "https://github.com/prove-rs/z3.rs.git", optional = true}

[features]
default = []
wasm = []
z3feature = ["z3"]
